# subtask-manager

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  REFACTORING_SUMMARY.md  RELEASE.md  TODO.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: release-testpypi.yml  release.yml
python/: subtask_manager.py
python/common/: enums.py  models.py
python/file_manager/: file_classifier.py  file_loader.py
python/subtask_manager/: _core.pyd  _core.pyi
src/: enums.rs  file_classifier.rs  file_loader.rs  file_scanner.rs  lib.rs  models.rs  py_utils.rs
src/common/: models.py
src/file_manager/: file_classifier.py  file_manager.py
src/subtask_manager/: __init__.py  _core.pyd  subtask_manager.py
subtask_manager/: __init__.py  _core.pyd  _core.pyi
tests/: test_enums.py  test_enums_rs.py  test_file_classifier.py  test_file_classifier_rs.py  test_file_scanner.py  test_file_scanner_rs.py  test_subtask_apply_params.py  test_subtask_get_params.py  test_subtask_manager.py  test_subtask_render.py
tests/test_data/subtasks/customers/01_extract/: extract_data.sql
tests/test_data/subtasks/params_example/: all_styles0.sql  angle0.sql  curly1.sql  dollar_brace0.sql  double_underscore0.sql  non_string_params0.sql  percent0.sql
tests/test_data/subtasks/transactions/: load_transactions.sql  read_transactions.sql
